Fixed select appearance on safari

--- a/JavaScript/RSS_dashboard/public/css/custom.css
+++ b/JavaScript/RSS_dashboard/public/css/custom.css
@@ -34,6 +34,9 @@
 .label  {
   border-radius: 0;
 }
+select {
+  -webkit-appearance:none;
+}
 .label-info {
   background-color: #5000BE;
 }
